--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,6 +17,18 @@ a {
 }
 
 .app {
-  width: 90%;
+  width: 80%;
   margin: auto;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    rotate: 0deg;
+  }
+
+  100% {
+    opacity: 1;
+    rotate: -360deg;
+  }
 }
