--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,10 +25,22 @@ a {
   0% {
     opacity: 0;
     rotate: 0deg;
+    /* translate: 30px; */
   }
 
   100% {
     opacity: 1;
+    /* translate: 30px; */
     rotate: -360deg;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
