--- a/client/src/components/exploreMenu/ExploreMenu.css
+++ b/client/src/components/exploreMenu/ExploreMenu.css
@@ -55,3 +55,10 @@
   background: #e2e2e2;
   border: none;
 }
+
+@media (max-width: 1050px) {
+  .menu-text {
+    max-width: 100%;
+    font-size: 14px;
+  }
+}
